<resources>
    <string name="app_name">Virtual Bank</string>
    <string name="title_activity_cards">Your cards</string>
    <string name="title_activity_card_view">Your card</string>

    <string name="no_account_yet">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="have_an_account">Have an account? Login</string>

    <!-- Strings related to loginClick -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="current_balance">Current Balance</string>
    <string name="available">Available</string>
    <string name="operations">Operations</string>
    <string name="send">Send</string>
    <string name="replenish">Replenish</string>
    <string name="withdraw">Withdraw</string>
    <string name="history">History</string>
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="bank_name">BANK NAME</string>
    <string name="card_name">Card name</string>
    <string name="pin_code">Pin code</string>
    <string name="create_card">Create card</string>
    <string name="cancel">Cancel</string>
    <string name="amount_of_replenishment">Amount of replenishment</string>
    <string name="amount_of_withdraw">Amount of withdraw</string>
    <string name="recipient_card_number">Recipient card number</string>
    <string name="amount_of_sending">Amount of sending</string>
    <string name="close">Close</string>
    <string name="dollar_sign">$</string>

</resources>
