<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo"
                android:padding="10dp"
                android:src="@drawable/app_logo_white_1024" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_email_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/LoginTextInputLabel"
                app:errorTextAppearance="@style/LoginTextInputError">

                <EditText
                    android:id="@+id/et_signup_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_name_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/LoginTextInputLabel"
                app:errorTextAppearance="@style/LoginTextInputError">

                <EditText
                    android:id="@+id/et_signup_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/name"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_password_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/LoginTextInputLabel"
                app:errorTextAppearance="@style/LoginTextInputError">

                <EditText
                    android:id="@+id/et_signup_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_confirm_password_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/LoginTextInputLabel"
                app:errorTextAppearance="@style/LoginTextInputError">

                <EditText
                    android:id="@+id/et_signup_confirm_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_signup_create"
                style="@style/ButtonMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/create_account" />

            <TextView
                android:id="@+id/tv_signup_login"
                style="@style/Text.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="@dimen/large_margin"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/have_an_account"
                android:textAlignment="center" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>