<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/background_gradient">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            android:focusableInTouchMode="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/app_logo_white_1024"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo"
                android:padding="10dp"
                android:layout_marginBottom="50dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_email_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/LoginTextInputError"
                android:theme="@style/LoginTextInputLabel">

                <EditText
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/email"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/LoginTextInputError"
                android:theme="@style/LoginTextInputLabel">

                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/password"
                    android:textColor="@color/white"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/login"
                style="@style/ButtonMain"/>

            <TextView
                android:id="@+id/tv_login_signup"
                style="@style/Text.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/no_account_yet"
                android:textAlignment="center"
                android:layout_marginBottom="50dp"/>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>