<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CardViewActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title_balance"
                style="@style/Text.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_balance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_card_balance"
                style="@style/Text.HeaderWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_margin"
                android:text="$ 2,205.48"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_balance"/>

            <TextView
                android:id="@+id/tv_title_available"
                style="@style/Text.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_card_balance"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.testtask.vadim.virtualbank.ui.view.LinearLayoutSquare
            android:id="@+id/btn_card_send"
            style="@style/ActionButton"
            app:layout_constraintEnd_toStartOf="@+id/btn_card_replenish"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                style="@style/ActionButtonImage"
                android:src="@drawable/send"/>

            <TextView
                style="@style/ActionButtonText"
                android:text="@string/send"/>

        </com.testtask.vadim.virtualbank.ui.view.LinearLayoutSquare>

        <com.testtask.vadim.virtualbank.ui.view.LinearLayoutSquare
            android:id="@+id/btn_card_replenish"
            style="@style/ActionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/btn_card_send">

            <ImageView
                style="@style/ActionButtonImage"
                android:src="@drawable/replenish"/>

            <TextView
                style="@style/ActionButtonText"
                android:text="@string/replenish"/>

        </com.testtask.vadim.virtualbank.ui.view.LinearLayoutSquare>

        <com.testtask.vadim.virtualbank.ui.view.LinearLayoutSquare
            android:id="@+id/btn_card_withdraw"
            style="@style/ActionButton"
            app:layout_constraintEnd_toStartOf="@+id/btn_card_history"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_card_send">

            <ImageView
                android:adjustViewBounds="true"
                style="@style/ActionButtonImage"
                android:src="@drawable/withdraw"/>

            <TextView
                style="@style/ActionButtonText"
                android:text="@string/withdraw"/>

        </com.testtask.vadim.virtualbank.ui.view.LinearLayoutSquare>

        <com.testtask.vadim.virtualbank.ui.view.LinearLayoutSquare
            android:id="@+id/btn_card_history"
            style="@style/ActionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/btn_card_withdraw"
            app:layout_constraintTop_toBottomOf="@+id/btn_card_replenish">

            <ImageView
                android:adjustViewBounds="true"
                style="@style/ActionButtonImage"
                android:src="@drawable/history"/>

            <TextView
                style="@style/ActionButtonText"
                android:text="@string/history"/>

        </com.testtask.vadim.virtualbank.ui.view.LinearLayoutSquare>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>